# gek1011_jhochsteger

./: CMakeLists.txt  research.md
ampel/: ampel.c
ampel_tiny/: CMakeLists.txt  ampel_tiny.c
freertos/ampel/: CMakeLists.txt  main.cpp
spi/: CMakeLists.txt  spi.c
